force-app/main/default/objects/Price_Book__c/Price_Book__c.object-meta.xml
<CustomObject>
    <label>Price Book</label>
    <nameField>
        <label>Price Book Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>