force-app/main/default/objects/Price_Book__c/fields/Changing_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Changing_Item_Number__c</fullName>
    <label>Changing Item Count</label>
    <summaryFilterItems>
        <field>Price_Book_Item__c.Is_Changing__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Book_Item__c.Price_Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>