force-app/main/default/objects/Price_Book__c/fields/No_Price_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>No_Price_Item_Count__c</fullName>
    <label>No Price Item Count</label>
    <summaryFilterItems>
        <field>Price_Book_Item__c.Price__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Book_Item__c.Price_Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>