force-app/main/default/objects/Price_Book__c/fields/Price_Book_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Type__c</fullName>
    <label>Price Book Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>