force-app/main/default/objects/Price_Book__c/fields/Sales_Org_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Text__c</fullName>
    <defaultValue>$User.Sales_Org_Text__c</defaultValue>
    <label>Sales Org Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>