force-app/main/default/objects/Price_Book__c/validationRules/Can_not_pick_this_org.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_pick_this_org</fullName>
    <active>true</active>
    <errorConditionFormula>OR(BEGINS(TEXT(Sales_Org__c) , &apos;1&apos;) ,AND(BEGINS( TEXT(Sales_Org__c) , &apos;2&apos;),TEXT(Sales_Org__c)!=&apos;2100&apos;))</errorConditionFormula>
    <errorDisplayField>Sales_Org__c</errorDisplayField>
    <errorMessage>Can not select this sales org</errorMessage>
</ValidationRule>