force-app/main/default/objects/Price_Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Delivery_Plant__c</columns>
    <columns>Changing_Item_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>